2016-09-29 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/fiid/fiid.h,
	libfreeipmi/fiid/fiid.c: Support new
	FIID_FIELD_SECURE_MEMSET_ON_CLEAR flag.
	
2016-09-29 Albert Chu <chu11@llnl.gov>

	* Remove additions of ipmi_rmcpplus_get_random and
	crypt_get_random from 2016-09-26.  Older versions of gcrypt do not
	allow multiple threads into gcry_randomize simultaneously, which
	could greatly hurt initialization performance in multi-threaded
	applications.  In addition, since ipmi_get_random() is only called
	during initialization in all libraries/code, the somewhat slower
	ipmi_get_random() shouldn't affect long running performance of
	applications.  Reconsider change again in the future.

2016-09-29 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/fiid/fiid.c (_fiid_template_field_start)
	(_fiid_template_field_end, _fiid_template_field_len)
	(_fiid_template_block_len): Create various internal versions of
	functions which can be used internally to avoid duplicate API
	checks in _fiid_template_check_valid_keys.
	
2016-09-28 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/util/ipmi-rmcpplus-util.c: Do not secure_memset
	buffers with usernames.  Do not consider username to be
	secure_memset necessary.

2016-09-28 Albert Chu <chu11@llnl.gov>

	Cleanup over-excessive use of secure_memset, should only be used
	to clear buffers containing cryptographic keys (i.e. passwords).

	* libipmimonitoring/ipmi_monitoring.c (ipmi_monitoring_ctx_create):
	Remove unnecessary call to secure_memset().

	* ipmipower/ipmipower_powercmd.c (_send_packet, _recv_packet):
	Call secure_memset only when necessary (using plain passwords).

	* ipmiconsole/ipmiconsole.c (main, _stdin): Remove unnecessary and
	excessive calls to secure_memset.

	* libfreeipmi/util/ipmi-rmcpplus-util.c (ipmi_calculate_rmcpplus_session_keys)
	(ipmi_rmcpplus_check_packet_session_authentication_code)
	(ipmi_rmcpplus_check_rakp_2_key_exchange_authentication_code)